Final resume print layout

--- a/assets/css/colors.css
+++ b/assets/css/colors.css
@@ -6,7 +6,7 @@
 
   --accent-color:            red;
   --heading-color:           black;
-  --muted-color:             darkgrey;
+  --muted-color:             #999;
   --border-color:            #d8d8d8;
 
   --link-color:              blue;
