--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -1,5 +1,5 @@
-@import "colors.css";
-@import "font-icons.css";
+@import "colors.css?v=20250124";
+@import "font-icons.css?v=20250124";
 
 :root {
   --base-font-size:  1rem;
